# CustomHeadsetOpenVR

./: .gitignore  .gitmodules  CustomHeadsetOpenVR.sln  README.md  bump-version.js
CustomHeadsetGUI/src-tauri/: Cargo.toml  tauri.conf.json
CustomHeadsetGUI/src-tauri/capabilities/: default.json
CustomHeadsetGUI/src-tauri/icons/: icon.icns
CustomHeadsetGUI/src-tauri/src/: i18n.rs  js_api.rs  lib.rs  main.rs
CustomHeadsetOpenVR/: CMakeLists.txt  CopyExcludes.txt  CustomHeadsetOpenVR.vcxproj  CustomHeadsetOpenVR.vcxproj.filters
CustomHeadsetOpenVR/DriverFiles/: driver.vrdrivermanifest
CustomHeadsetOpenVR/DriverFiles/resources/localization/: localization.json
CustomHeadsetOpenVR/DriverFiles/resources/rendermodels/crystal_controller_left/: crystal_controller_left.json  crystal_controller_left.mtl
CustomHeadsetOpenVR/DriverFiles/resources/settings/: default.vrsettings
CustomHeadsetOpenVR/DriverFiles/resources/shaders/d3d11/: distort_ps_layered.hlsl
CustomHeadsetOpenVR/src/Config/: Config.cpp  Config.h  ConfigLoader.cpp  ConfigLoader.h
CustomHeadsetOpenVR/src/Distortion/: DistortionModifier.h  DistortionProfile.h  DistortionProfileConstructor.cpp  DistortionProfileConstructor.h  NoneDistortionProfile.h  RadialBezierDistortionProfile.cpp  RadialBezierDistortionProfile.h
CustomHeadsetOpenVR/src/Driver/: CompositorPlugin.cpp  CompositorPlugin.h  DeviceProvider.cpp  DeviceProvider.h  DeviceShim.cpp  DeviceShim.h  DriverLog.cpp  DriverLog.h  HidModifier.cpp  HidModifier.h  HmdDriverFactory.cpp  ShaderReplacement.cpp  ShaderReplacement.h
CustomHeadsetOpenVR/src/Driver/Hooking/: Hooking.h  InterfaceHookInjector.cpp  InterfaceHookInjector.h  README.md  vtablehook.h
CustomHeadsetOpenVR/src/Headsets/: BaseHeadset.cpp  BaseHeadset.h  DreamAir.cpp  DreamAir.h  FakeHeadset.cpp  FakeHeadset.h  GenericHeadset.cpp  GenericHeadset.h  MeganeX8K.cpp  MeganeX8K.h  PimaxLighthouse.cpp  PimaxLighthouse.h  PimaxSlam.cpp  PimaxSlam.h
CustomHeadsetOpenVR/src/Helpers/: DisplayHelper.cpp  DisplayHelper.h  EyeTrackingOutput.cpp  EyeTrackingOutput.h  PimaxCommon.cpp  PimaxCommon.h  PimaxEyeTrackingBridge.cpp  PimaxEyeTrackingBridge.h
CustomHeadsetOpenVR/src/HiddenArea/: HiddenArea.cpp  HiddenArea.h
(+123 files in other folders)
